framec/tests/snapshots/swift_snapshots__lifecycle.snap
---
source: framec/tests/swift_snapshots.rs
expression: "compile_fixture(\"08_lifecycle\", \"swift\")"
---
import Foundation

class LifecycleFrameEvent {
    var _message: String
    var _parameters: [Any]

    init(message: String, parameters: [Any] = []) {
        self._message = message
        self._parameters = parameters
    }
}

class LifecycleFrameContext {
    var _event: LifecycleFrameEvent
    var _return: Any?
    var _data: [String: Any] = [:]
    var _transitioned: Bool = false

    init(event: LifecycleFrameEvent, defaultReturn: Any? = nil) {
        self._event = event
        self._return = defaultReturn
    }
}

class LifecycleCompartment {
    var state: String
    var state_args: [Any] = []
    var state_vars: [String: Any] = [:]
    var enter_args: [Any] = []
    var exit_args: [Any] = []
    var forward_event: LifecycleFrameEvent?
    var parent_compartment: LifecycleCompartment?

    init(state: String) {
        self.state = state
    }

    func copy() -> LifecycleCompartment {
        let c = LifecycleCompartment(state: self.state)
        c.state_args = self.state_args
        c.state_vars = self.state_vars
        c.enter_args = self.enter_args
        c.exit_args = self.exit_args
        c.forward_event = self.forward_event
        c.parent_compartment = self.parent_compartment
        return c
    }
}

public class Lifecycle {
    private var _state_stack: [LifecycleCompartment] = []
    private var __compartment: LifecycleCompartment
    private var __next_compartment: LifecycleCompartment? = nil
    private var _context_stack: [LifecycleFrameContext] = []
    public var entered: Int = 0
    public var exited: Int = 0
    public var tag: String = ""

    init() {
        _state_stack = []
        _context_stack = []
        self.__compartment = Lifecycle.__prepareEnter("Idle", [], [])
        self.__next_compartment = nil
    }

    func __frame_init() {
        let __e = LifecycleFrameEvent(message: "$>", parameters: __compartment.enter_args)
        let __ctx = LifecycleFrameContext(event: __e)
        _context_stack.append(__ctx)
        __kernel(__e)
        _context_stack.removeLast()
    }

    static func __create() -> Lifecycle {
        let c = Lifecycle()
        c.__frame_init()
        return c
    }

    private static func hsm_chain() -> [String: [String]] {
        return [
            "Idle": ["Idle"],
            "Running": ["Running"],
        ]
    }
    private static func __prepareEnter(_ leaf: String, _ state_args: [Any], _ enter_args: [Any]) -> LifecycleCompartment {
        var comp: LifecycleCompartment? = nil
        for name in Lifecycle.hsm_chain()[leaf]! {
            let new_comp = LifecycleCompartment(state: name)
            new_comp.state_args = state_args
            new_comp.enter_args = enter_args
            new_comp.parent_compartment = comp
            comp = new_comp
        }
        return comp!
    }
    private func __prepareExit(_ exit_args: [Any]) {
        var comp: LifecycleCompartment? = __compartment
        while comp != nil {
            comp!.exit_args = exit_args
            comp = comp!.parent_compartment
        }
    }

    private func __kernel(_ __e: LifecycleFrameEvent) {
        // Route event to current state.
        __router(__e)
        // Drain any transitions queued by the handler.
        while __next_compartment != nil {
            let next_compartment: LifecycleCompartment = __next_compartment!
            __next_compartment = nil
            // Exit the current (leaf) state.
            let exit_event = LifecycleFrameEvent(message: "<$", parameters: __compartment.exit_args)
            __router(exit_event)
            // Switch to the new compartment.
            __compartment = next_compartment
            // Three-branch forward-event handling.
            let forward_event: LifecycleFrameEvent? = next_compartment.forward_event
            next_compartment.forward_event = nil
            if forward_event == nil {
                // No forwarded event — synthesize a fresh $>.
                let enter_event = LifecycleFrameEvent(message: "$>", parameters: __compartment.enter_args)
                __router(enter_event)
            } else if forward_event!._message == "$>" {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                __router(forward_event!)
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                let enter_event = LifecycleFrameEvent(message: "$>", parameters: __compartment.enter_args)
                __router(enter_event)
                __router(forward_event!)
            }
            for ctx in _context_stack {
                ctx._transitioned = true
            }
        }
    }

    private func __router(_ __e: LifecycleFrameEvent) {
        if __compartment.state == "Idle" {
            _state_Idle(__e, __compartment)
        } else if __compartment.state == "Running" {
            _state_Running(__e, __compartment)
        }
    }

    private func __transition(_ next: LifecycleCompartment) {
        __next_compartment = next
    }

    public func start(_ label: String) {
        let __e = LifecycleFrameEvent(message: "start", parameters: [label])
        let __ctx = LifecycleFrameContext(event: __e)
        _context_stack.append(__ctx)
        __kernel(_context_stack[_context_stack.count - 1]._event)
        _context_stack.removeLast()
    }

    public func stop() {
        let __e = LifecycleFrameEvent(message: "stop", parameters: [])
        let __ctx = LifecycleFrameContext(event: __e)
        _context_stack.append(__ctx)
        __kernel(_context_stack[_context_stack.count - 1]._event)
        _context_stack.removeLast()
    }

    private func _state_Idle(_ __e: LifecycleFrameEvent, _ compartment: LifecycleCompartment) {
        if __e._message == "start" {
            self._s_Idle_hdl_user_start(__e, compartment)
            return
        }
    }

    private func _state_Running(_ __e: LifecycleFrameEvent, _ compartment: LifecycleCompartment) {
        if __e._message == "<$" {
            self._s_Running_hdl_frame_exit(__e, compartment)
            return
        }
        if __e._message == "$>" {
            self._s_Running_hdl_frame_enter(__e, compartment)
            return
        }
        if __e._message == "stop" {
            self._s_Running_hdl_user_stop(__e, compartment)
            return
        }
    }

    private func _s_Idle_hdl_user_start(_ __e: LifecycleFrameEvent, _ compartment: LifecycleCompartment) {
        let label = __e._parameters[0] as! String
        (label)
        let __compartment = Lifecycle.__prepareEnter("Running", [], [])
        __transition(__compartment)
        return
    }

    private func _s_Running_hdl_frame_exit(_ __e: LifecycleFrameEvent, _ compartment: LifecycleCompartment) {
        self.exited = self.exited + 1
    }

    private func _s_Running_hdl_frame_enter(_ __e: LifecycleFrameEvent, _ compartment: LifecycleCompartment) {
        let label = compartment.enter_args[0] as! String
        self.entered = self.entered + 1
        self.tag = label
    }

    private func _s_Running_hdl_user_stop(_ __e: LifecycleFrameEvent, _ compartment: LifecycleCompartment) {
        let __compartment = Lifecycle.__prepareEnter("Idle", [], [])
        __transition(__compartment)
        return
    }
}
